{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 278,
  "lineage": "1303328d-34f4-13fd-afd5-0061b69aac7f",
  "resources": [
    {
      "module": "module.elastic-ip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nat_gateway",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df02166391eee49f",
            "arn": "arn:aws:ec2:us-east-1:314256125919:elastic-ip/eipalloc-0df02166391eee49f",
            "association_id": "eipassoc-015fae88fa2b041b3",
            "domain": "vpc",
            "id": "eipalloc-0df02166391eee49f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-038659370e4588c8b",
            "private_dns": "ip-10-128-1-204.ec2.internal",
            "private_ip": "10.128.1.204",
            "public_dns": "ec2-23-20-81-218.compute-1.amazonaws.com",
            "public_ip": "23.20.81.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "eip-nat",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "eip-nat",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.internet-gtw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:internet-gateway/igw-0aa99dc7325ff1ceb",
            "id": "igw-0aa99dc7325ff1ceb",
            "owner_id": "314256125919",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "igw-inteligencia-dados",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "igw-inteligencia-dados",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gtw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gtw_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df02166391eee49f",
            "association_id": "eipassoc-015fae88fa2b041b3",
            "connectivity_type": "public",
            "id": "nat-0c33ae9073e138533",
            "network_interface_id": "eni-038659370e4588c8b",
            "private_ip": "10.128.1.204",
            "public_ip": "23.20.81.218",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08165c2312f1aabdf",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "nat-gtw-inteligencia-dados",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "nat-gtw-inteligencia-dados",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            }
          },
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gtw_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aa99dc7325ff1ceb",
            "id": "r-rtb-06ed2c7c1765fbfcd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06ed2c7c1765fbfcd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.route_tables.aws_route_table.public_rt",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_gateway_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "id-prd-rtb-private1-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05fadaea5263fd37a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c33ae9073e138533",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05fadaea5263fd37a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.nat-gtw.aws_nat_gateway.nat_gtw_id",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "id-prd-rtb-private2-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b5deb2b53bf19c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c33ae9073e138533",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b5deb2b53bf19c2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.nat-gtw.aws_nat_gateway.nat_gtw_id",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "id-prd-rtb-private3-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0556c3eaed64fb9b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c33ae9073e138533",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0556c3eaed64fb9b8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.nat-gtw.aws_nat_gateway.nat_gtw_id",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "id-prd-rtb-private4-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0692c5b382432a74b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c33ae9073e138533",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0692c5b382432a74b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic-ip.aws_eip.eips_id",
            "module.internet-gtw.aws_internet_gateway.igw_id",
            "module.nat-gtw.aws_nat_gateway.nat_gtw_id",
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "id-prd-rtb-private1-us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:route-table/rtb-05fadaea5263fd37a",
            "id": "rtb-05fadaea5263fd37a",
            "owner_id": "314256125919",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-rtb-private1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-rtb-private1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "id-prd-rtb-private2-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:route-table/rtb-09b5deb2b53bf19c2",
            "id": "rtb-09b5deb2b53bf19c2",
            "owner_id": "314256125919",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-rtb-private2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-rtb-private2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "id-prd-rtb-private3-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:route-table/rtb-0556c3eaed64fb9b8",
            "id": "rtb-0556c3eaed64fb9b8",
            "owner_id": "314256125919",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-rtb-private3-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-rtb-private3-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "id-prd-rtb-private4-us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:route-table/rtb-0692c5b382432a74b",
            "id": "rtb-0692c5b382432a74b",
            "owner_id": "314256125919",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-rtb-private4-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-rtb-private4-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:route-table/rtb-06ed2c7c1765fbfcd",
            "id": "rtb-06ed2c7c1765fbfcd",
            "owner_id": "314256125919",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa99dc7325ff1ceb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "rtb-public",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "rtb-public",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b447dba8a7d5bf45",
            "route_table_id": "rtb-05fadaea5263fd37a",
            "subnet_id": "subnet-00ebeb56ace47cddb"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054daddc7e2978451",
            "route_table_id": "rtb-09b5deb2b53bf19c2",
            "subnet_id": "subnet-0994f6a8b58aaec57"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f3ca596b0626014f",
            "route_table_id": "rtb-0556c3eaed64fb9b8",
            "subnet_id": "subnet-0d2f02a23932500f4"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2a4dd7d5079ca62",
            "route_table_id": "rtb-0692c5b382432a74b",
            "subnet_id": "subnet-07b049fef0f74178a"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt",
            "module.subnets.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0ae6a6e7408a6d9",
            "route_table_id": "rtb-06ed2c7c1765fbfcd",
            "subnet_id": "subnet-08165c2312f1aabdf"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029f2d29d01923999",
            "route_table_id": "rtb-06ed2c7c1765fbfcd",
            "subnet_id": "subnet-0f61ad411921ab638"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:subnet/subnet-00ebeb56ace47cddb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.128.8.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ebeb56ace47cddb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314256125919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-private1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-private1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:subnet/subnet-0994f6a8b58aaec57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.128.12.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0994f6a8b58aaec57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314256125919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-private2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-private2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:subnet/subnet-0d2f02a23932500f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.128.16.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2f02a23932500f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314256125919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-private3-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-private3-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:subnet/subnet-07b049fef0f74178a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.128.20.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b049fef0f74178a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314256125919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-private4-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-private4-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:subnet/subnet-08165c2312f1aabdf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.128.0.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08165c2312f1aabdf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314256125919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-public1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-public1-us-east-1a",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:subnet/subnet-0f61ad411921ab638",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.128.4.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f61ad411921ab638",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "314256125919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-public2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "id-prd-subnet-public2-us-east-1b",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "vpc_id": "vpc-005f54484be5aaf90"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:314256125919:vpc/vpc-005f54484be5aaf90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/18",
            "default_network_acl_id": "acl-0f8d20e0e6f1598c9",
            "default_route_table_id": "rtb-044996986f478b890",
            "default_security_group_id": "sg-018a8d9a3337087b0",
            "dhcp_options_id": "dopt-0737cb1164d61b447",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-005f54484be5aaf90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-044996986f478b890",
            "owner_id": "314256125919",
            "tags": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "vpc-inteligencia-dados",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            },
            "tags_all": {
              "Domain": "inteligencia-dados",
              "Environment": "prd",
              "Name": "vpc-inteligencia-dados",
              "Owner": "infra",
              "Provisioning-method": "terraform"
            }
          }
        }
      ]
    }
  ]
}